<?xml version="1.0"?>
<package format="3">
    <name>plotjuggler</name>
    <version>3.5.0</version>
    <description>PlotJuggler: juggle with data</description>

    <maintainer email="davide.faconti@gmail.com">Davide Faconti</maintainer>
    <license>LGPLv3</license>

    <url type="website">https://github.com/facontidavide/PlotJuggler</url>

    <author email="davide.faconti@gmail.com">Davide Faconti</author>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>ament_index_cpp</depend>
    <depend>rclcpp</depend>

    <!-- common dependancies -->
    <depend>qtbase5-dev</depend>
    <depend>libqt5-svg-dev</depend>
    <depend>libqt5-websockets-dev</depend>
    <depend>libqt5-opengl-dev</depend>
    <depend>libqt5x11extras5-dev</depend>
    <depend>binutils</depend>
    <depend>boost</depend>
    <depend>libzmq3-dev</depend>

    <depend>uto_msgs</depend>
    

    <build_depend>rosidl_default_generators</build_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>
    <exec_depend>rosidl_typesupport_cpp</exec_depend>
    <member_of_group>rosidl_interface_packages</member_of_group>


    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
